--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,14 @@ dependencies:
   flutter:
     sdk: flutter
   dropdown_search: ^5.0.5
+  carousel_slider: ^4.2.1
+  flutter_svg: ^1.1.6
+  url_launcher: ^6.1.7
+  whatsapp_unilink: ^2.1.0
+  mailto: ^2.0.0
+  geolocator: ^9.0.2
+  android_intent_plus: ^3.1.5
+  geocoding: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
