--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   geolocator: ^9.0.2
   android_intent_plus: ^3.1.5
   geocoding: ^2.0.5
+  image_picker: ^0.8.6
+  image_cropper: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
