--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geocoding: ^2.0.5
   image_picker: ^0.8.6
   image_cropper: ^3.0.1
+  widgets: ^1.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
